--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 
 <body>
     <div class="wrap">
+        <div class="logo"><img src="img/logo.png" alt=""></div>
+        <div class="nav">
+            <ul>
+                <li>NEWS</li>
+                <li>PREVIEWS</li>
+                <li>REVIEWS</li>
+                <li>FEATURES</li>
+                <li>VIDEOS</li>
+            </ul>
+        </div>
+        <div class="release">
+            <h3>Release<br />Date</h3>
+        </div>
         <div class="container">
             <div class="left"></div>
             <div class="right">
