--- a/index.html
+++ b/index.html
@@ -27,9 +27,30 @@
         <div class="container">
             <div class="left"></div>
             <div class="right">
-                <div class="section" style="width:100%;height:80vh">角色1</div>
-                <div class="section" style="width:100%;height:80vh">角色2</div>
-                <div class="section" style="width:100%;height:80vh">角色3</div>
+                <div class="section one">
+                    <div class="card">
+                        <div class="card-role">
+                            <img src="img/destiny-role.png" alt="">
+                        </div>
+                        <div class="card-bg first"></div>
+                    </div>
+                </div>
+                <div class="section two">
+                    <div class="card">
+                        <div class="card-role">
+                            <img src="img/reskident_role.png" alt="">
+                        </div>
+                        <div class="card-bg second"></div>
+                    </div>
+                </div>
+                <div class="section three">
+                    <div class="card">
+                        <div class="card-role">
+                            <img src="img/rassassins-role.png" alt="">
+                        </div>
+                        <div class="card-bg third"></div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="date">
