完成描述文字

--- a/index.html
+++ b/index.html
@@ -29,26 +29,68 @@
             <div class="right">
                 <div class="section one">
                     <div class="card">
-                        <div class="card-role">
-                            <img src="img/destiny-role.png" alt="">
-                        </div>
+                        <div class="card-role"><img src="img/destiny-role.png" alt=""></div>
                         <div class="card-bg first"></div>
+                        <div class="time">
+                            <h1>03</h1>
+                            <span>MAY</span>
+                        </div>
+                        <div class="des">
+                            <h3>Destiny 2: Season of the Splicer</h3>
+                            <p>
+                                PlayStation 5 - Xbox Series X/S - PlayStation 4 - Xbox One -
+                                PC
+                            </p>
+                        </div>
+                        <div class="btn">
+                            <a href="#">
+                                <h3>More Info</h3>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="section two">
                     <div class="card">
-                        <div class="card-role">
-                            <img src="img/reskident_role.png" alt="">
+                        <div class="card-role"><img src="img/reskident_role.png" alt=""></div>
+                        <div class="card-bg sec"></div>
+                        <div class="time">
+                            <h1>13</h1>
+                            <span>MAY</span>
                         </div>
-                        <div class="card-bg second"></div>
+                        <div class="des">
+                            <h3>Assassin's Creed Valhalla: Wrath of the Druids DLC</h3>
+                            <p>
+                                PlayStation 5 - Xbox Series X/S - PlayStation 4 - Xbox One -
+                                PC
+                            </p>
+                        </div>
+                        <div class="btn">
+                            <a href="#">
+                                <h3>More Info</h3>
+                            </a>
+                        </div>
                     </div>
                 </div>
                 <div class="section three">
                     <div class="card">
-                        <div class="card-role">
-                            <img src="img/rassassins-role.png" alt="">
-                        </div>
+                        <div class="card-role"><img src="img/rassassins-role.png" alt=""></div>
                         <div class="card-bg third"></div>
+                        <div class="time">
+                            <h1>07</h1>
+                            <span>MAY</span>
+                        </div>
+                        <div class="des">
+                            <h3>Resident Evil Village</h3>
+                            <p>
+                                PlayStation 5 - Xbox Series X/S - PlayStation 4 - Xbox One -
+                                PC
+                            </p>
+                        </div>
+                        <div class="btn">
+                            <a href="#">
+                                <h3>More Info</h3>
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
