--- a/index.html
+++ b/index.html
@@ -160,6 +160,11 @@
             </div>
         </div>
     </div>
+    <script src="js/gsap.min.js"></script>
+    <script src="js/app.js"></script>
 </body>
+
+</html>
+
 
 </html>
