--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
         </div>
     </div>
     <script src="js/gsap.min.js"></script>
+    <script src="js/ScrollTrigger.min.js"></script>
     <script src="js/app.js"></script>
 </body>
 
